
[project]
name = "ramp-mcp"
version = "0.0.1"
description = "Ramp MCP Demo"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "uuid>=1.30.0",
    "iso4217>=1.12.20240625",
    "flatten-json>=0.1.14",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.ruff]
line-length = 88 
target-version = "py310" 

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.uv]
dev-dependencies = ["ruff>=0.8.0"]

[project.scripts]
ramp-mcp = "ramp_mcp:main"

